src/test/ui/borrowck/borrowck-match-already-borrowed.ast.stderr
error[E0503]: cannot use `(foo as Foo::A).0` because it was mutably borrowed
  --> $DIR/borrowck-match-already-borrowed.rs:25:16
   |
LL |     let p = &mut foo;
   |                  --- borrow of `foo` occurs here
...
LL |         Foo::A(x) => x //[ast]~ ERROR [E0503]
   |                ^ use of borrowed `foo`

error[E0503]: cannot use `x` because it was mutably borrowed
  --> $DIR/borrowck-match-already-borrowed.rs:36:9
   |
LL |     let r = &mut x;
   |                  - borrow of `x` occurs here
LL |     let _ = match x { //[mir]~ ERROR [E0503]
LL |         x => x + 1, //[ast]~ ERROR [E0503]
   |         ^ use of borrowed `x`

error[E0503]: cannot use `x` because it was mutably borrowed
  --> $DIR/borrowck-match-already-borrowed.rs:38:9
   |
LL |     let r = &mut x;
   |                  - borrow of `x` occurs here
...
LL |         y => y + 2, //[ast]~ ERROR [E0503]
   |         ^ use of borrowed `x`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0503`.
